# glut_project

./: .gitignore  CMakeLists.txt  Color.cpp  Color.hpp  Cone.cpp  Cone.hpp  Cubo.cpp  Esfera.cpp  Esfera.hpp  FileReader.cpp  FileReader.hpp  Forms.cpp  Forms.hpp  Ponto.cpp  Ponto.hpp  Quadrado.cpp  Quadrado.hpp  README.md  Triangulo.cpp  Triangulo.hpp  cubo.hpp  load_file.txt  main.cpp
